# TextureAtlasCreator

./: CMakeLists.txt  README  README.md  main.cpp
AccessRestriction/: PassKey.h
Assets/Sample Project/: sampeProject.tac  sampleProject.tac
Assets/Test/: test.tac  test2.tac
Atlas/: AtlasInformationBundle.cpp  AtlasInformationBundle.h  SelectedTexture.cpp  SelectedTexture.h  TextureAtlas.cpp  TextureAtlas.h  TextureDrawingPosition.h
Atlas/TextureBorder/: Border.h  SurroundingBorder.cpp  SurroundingBorder.h
Attributes/: AttributeMacros.h  UndefMacros.h
Docs/Diagrams/: Note- README.txt
Docs/User Guide/: User Guide.docx
Exceptions/Atlas/: TextureAlreadyLoaded.h
GUI/: MainWindow.cpp  MainWindow.h  NameForm.cpp  NameForm.h  mainwindow.ui  nameUI.ui
GUI/Atlas/: AtlasTabOptionsMenu.cpp  AtlasTabOptionsMenu.h  AtlasTabWidget.cpp  AtlasTabWidget.h  AtlasWidget.cpp  AtlasWidget.h  ScrollArea.cpp  ScrollArea.h
GUI/BrushSettings/: CurrentBrushSettings.cpp  CurrentBrushSettings.h  brushSettings.ui
GUI/CurrentTexture/: CurrentTextureImage.h  CurrentTextureTabWidget.cpp  CurrentTextureTabWidget.h  PaintArea.cpp  PaintArea.h  RenderArea.cpp  RenderArea.h  ScrollArea.cpp  ScrollArea.h
GUI/CurrentTexture/SpecularTexture/: DisplayArea.cpp  DisplayArea.h  ScrollArea.cpp  ScrollArea.h  SpecularTextureTabWidget.cpp  SpecularTextureTabWidget.h
GUI/Dialogs/: AddNewAtlasTab.cpp  AddNewAtlasTab.h  AddNewTab.cpp  AddNewTab.h  ChooseTexture.cpp  ChooseTexture.h  ResizeAtlas.cpp  ResizeAtlas.h  chooseTexture.ui  newTabDialog.ui  newTextureAtlasDialog.ui  resizeAtlasDialog.ui
GUI/LoadResults/: LoadedTextures.cpp  LoadedTextures.h  OptionsMenu.cpp  OptionsMenu.h  ScrollArea.cpp  ScrollArea.h  TextureButton.cpp  TextureButton.h  TextureButtonArea.cpp  TextureButtonArea.h
GUI/TextureHelperFunctions/: HelperFunctions.cpp  HelperFunctions.h  TextureFormats.cpp  TextureFormats.h
GUI/TextureInformation/: SaveQualitySlider.cpp  SaveQualitySlider.h  SelectedTextureInformation.cpp  SelectedTextureInformation.h  TextureInfoScrollArea.cpp  TextureInfoScrollArea.h  selectedTextureInformation.ui
HelperUtilities/: Assert.h
PaintFunctions/: Brush.cpp  Brush.h  PaintHistoryCommand.cpp  PaintHistoryCommand.h  PaintedArea.h
ProjectLoader/: ProjectParser.cpp  ProjectParser.h  TextureAtlasLoader.h  TextureButtonAreaLoader.h
ProjectLoaderSaver/: ProjectSaver.cpp  ProjectSaver.h  TextureSaveInformation.h
Tests/: EnableTests.h  TestSuite.cpp  TestSuite.h
Tests/GUI/: TestTextureButtonArea.cpp  TestTextureButtonArea.h
Tests/ProjectLoader/: TestProjectLoader.cpp  TestProjectLoader.h
Tests/ProjectLoader/TestAssets/SaveTest1/: SaveTest1.tac
Tests/ProjectLoader/TestAssets/SaveTest2/: SaveTest2.tac
Tests/SurroundingBorder/: TestSurroundingBorder.cpp  TestSurroundingBorder.h
Tests/TextureAtlas/: TestSelectedTexture.cpp  TestSelectedTexture.h  TestTextureAtlas.cpp  TestTextureAtlas.h
Tests/TextureAtlas/TestAssets/: testSave.tac
Tests/TextureLogic/: TestTextureBank.cpp  TestTextureBank.h
TextureLogic/: ScaledTexture.cpp  ScaledTexture.h  Texture.cpp  Texture.h  TextureBank.cpp  TextureBank.h  Zoom.cpp  Zoom.h
TextureLogic/TextureBorder/: Border.h  SurroundingBorder.cpp  SurroundingBorder.h
User Guide/: User Guide.docx
